<resources>
    <string name="bsmla" translatable="false">بِسْمِ اللهِ الرَّحْمنِ الرَّحِيم</string>
    <string name="app_name">Young Believer</string>
    <string name="believer_name">Believer Name</string>
    <string name="believer_mail">believer.mail.example.com</string>
    <string name="home_page">Home</string>
    <string name="holy_quran">Holy Quran</string>
    <string name="sura_num1" translatable="false">1</string>
    <string name="sura_name1" translatable="false">سورة الفاتحة</string>
    <string name="sura_revelation1" translatable="false">مكية</string>
    <string name="sura_ayah_num1" translatable="false">7 آيــات</string>
    <string name="sura_num2" translatable="false">2</string>
    <string name="sura_name2" translatable="false">سورة البقرة</string>
    <string name="sura_revelation2" translatable="false">مدنية</string>
    <string name="sura_ayah_num2" translatable="false">286 آيــات</string>
    <string name="sura_num3" translatable="false">3</string>
    <string name="sura_name3" translatable="false">سورة آل عمران</string>
    <string name="sura_revelation3" translatable="false">مدنية</string>
    <string name="sura_ayah_num3" translatable="false">200 آيــات</string>
    <string name="sura_num4" translatable="false">4</string>
    <string name="sura_name4" translatable="false">سورة النساء</string>
    <string name="sura_revelation4" translatable="false">مدنية</string>
    <string name="sura_ayah_num4" translatable="false">176 آيــات</string>
    <string name="sura_num5" translatable="false">5</string>
    <string name="sura_name5" translatable="false">سورة المائدة</string>
    <string name="sura_revelation5" translatable="false">مدنية</string>
    <string name="sura_ayah_num5" translatable="false">120 آيــات</string>
    <string name="sura_num6" translatable="false">6</string>
    <string name="sura_name6" translatable="false">سورة الأنعام</string>
    <string name="sura_revelation6" translatable="false">مكية</string>
    <string name="sura_ayah_num6" translatable="false">165 آيــات</string>
    <string name="sura_num7" translatable="false">7</string>
    <string name="sura_name7" translatable="false">سورة الأعراف</string>
    <string name="sura_revelation7" translatable="false">مكية</string>
    <string name="sura_ayah_num7" translatable="false">206 آيــات</string>
    <string name="sura_num8" translatable="false">8</string>
    <string name="sura_name8" translatable="false">سورة الأنفال</string>
    <string name="sura_revelation8" translatable="false">مدنية</string>
    <string name="sura_ayah_num8" translatable="false">75 آيــات</string>
    <string name="sura_num9" translatable="false">9</string>
    <string name="sura_name9" translatable="false">سورة التوبة</string>
    <string name="sura_revelation9" translatable="false">مدنية</string>
    <string name="sura_ayah_num9" translatable="false">129 آيــات</string>
    <string name="sura_num10" translatable="false">10</string>
    <string name="sura_name10" translatable="false">سورة يونس</string>
    <string name="sura_revelation10" translatable="false">مكية</string>
    <string name="sura_ayah_num10" translatable="false">109 آيــات</string>
    <string name="sura_num11" translatable="false">11</string>
    <string name="sura_name11" translatable="false">سورة هود</string>
    <string name="sura_revelation11" translatable="false">مكية</string>
    <string name="sura_ayah_num11" translatable="false">123 آيــات</string>
    <string name="sura_num12" translatable="false">12</string>
    <string name="sura_name12" translatable="false">سورة يوسف</string>
    <string name="sura_revelation12" translatable="false">مكية</string>
    <string name="sura_ayah_num12" translatable="false">111 آيــات</string>
    <string name="sura_num13" translatable="false">13</string>
    <string name="sura_name13" translatable="false">سورة الرعد</string>
    <string name="sura_revelation13" translatable="false">مدنية</string>
    <string name="sura_ayah_num13" translatable="false">43 آيــات</string>
    <string name="sura_num14" translatable="false">14</string>
    <string name="sura_name14" translatable="false">سورة إبراهيم</string>
    <string name="sura_revelation14" translatable="false">مكية</string>
    <string name="sura_ayah_num14" translatable="false">52 آيــات</string>
    <string name="sura_num15" translatable="false">15</string>
    <string name="sura_name15" translatable="false">سورة الحجر</string>
    <string name="sura_revelation15" translatable="false">مكية</string>
    <string name="sura_ayah_num15" translatable="false">99 آيــات</string>
    <string name="sura_num16" translatable="false">16</string>
    <string name="sura_name16" translatable="false">سورة النحل</string>
    <string name="sura_revelation16" translatable="false">مكية</string>
    <string name="sura_ayah_num16" translatable="false">128 آيــات</string>
    <string name="sura_num17" translatable="false">17</string>
    <string name="sura_name17" translatable="false">سورة الإسراء</string>
    <string name="sura_revelation17" translatable="false">مكية</string>
    <string name="sura_ayah_num17" translatable="false">111 آيــات</string>
    <string name="sura_num18" translatable="false">18</string>
    <string name="sura_name18" translatable="false">سورة الكهف</string>
    <string name="sura_revelation18" translatable="false">مكية</string>
    <string name="sura_ayah_num18" translatable="false"> 110 آيــات</string>
    <string name="sura_num19" translatable="false">19</string>
    <string name="sura_name19" translatable="false">سورة مريم</string>
    <string name="sura_revelation19" translatable="false">مكية</string>
    <string name="sura_ayah_num19" translatable="false">98 آيــات</string>
    <string name="sura_num20" translatable="false">20</string>
    <string name="sura_name20" translatable="false">سورة طه</string>
    <string name="sura_revelation20" translatable="false">مكية</string>
    <string name="sura_ayah_num20" translatable="false">135 آيــات</string>
    <string name="sura_num21" translatable="false">21</string>
    <string name="sura_name21" translatable="false">سورة الأنبياء</string>
    <string name="sura_revelation21" translatable="false">مكية</string>
    <string name="sura_ayah_num21" translatable="false">112 آيــات</string>
    <string name="sura_num22" translatable="false">22</string>
    <string name="sura_name22" translatable="false">سورة الحج</string>
    <string name="sura_revelation22" translatable="false">مدنية</string>
    <string name="sura_ayah_num22" translatable="false">78 آيــات</string>
    <string name="sura_num23" translatable="false">23</string>
    <string name="sura_name23" translatable="false">سورة المؤمنون</string>
    <string name="sura_revelation23" translatable="false">مكية</string>
    <string name="sura_ayah_num23" translatable="false">118 آيــات</string>
    <string name="sura_num24" translatable="false">24</string>
    <string name="sura_name24" translatable="false">سورة النور</string>
    <string name="sura_revelation24" translatable="false">مدنية</string>
    <string name="sura_ayah_num24" translatable="false">64 آيــات</string>
    <string name="sura_num25" translatable="false">25</string>
    <string name="sura_name25" translatable="false">سورة الفرقان</string>
    <string name="sura_revelation25" translatable="false">مكية</string>
    <string name="sura_ayah_num25" translatable="false">77 آيــات</string>
    <string name="sura_num26" translatable="false">26</string>
    <string name="sura_name26" translatable="false">سورة الشعراء</string>
    <string name="sura_revelation26" translatable="false">مكية</string>
    <string name="sura_ayah_num26" translatable="false">227 آيــات</string>
    <string name="sura_num27" translatable="false">27</string>
    <string name="sura_name27" translatable="false">سورة النمل</string>
    <string name="sura_revelation27" translatable="false">مكية</string>
    <string name="sura_ayah_num27" translatable="false">93 آيــات</string>
    <string name="sura_num28" translatable="false">28</string>
    <string name="sura_name28" translatable="false">سورة القصص</string>
    <string name="sura_revelation28" translatable="false">مكية</string>
    <string name="sura_ayah_num28" translatable="false">88 آيــات</string>
    <string name="sura_num29" translatable="false">29</string>
    <string name="sura_name29" translatable="false">سورة العنكبوت</string>
    <string name="sura_revelation29" translatable="false">مكية</string>
    <string name="sura_ayah_num29" translatable="false">69 آيــات</string>
    <string name="sura_num30" translatable="false">30</string>
    <string name="sura_name30" translatable="false">سورة الروم</string>
    <string name="sura_revelation30" translatable="false">مكية</string>
    <string name="sura_ayah_num30" translatable="false">60 آيــات</string>
    <string name="sura_num31" translatable="false">31</string>
    <string name="sura_name31" translatable="false">سورة لقمان</string>
    <string name="sura_revelation31" translatable="false">مكية</string>
    <string name="sura_ayah_num31" translatable="false">34 آيــات</string>
    <string name="sura_num32" translatable="false">32</string>
    <string name="sura_name32" translatable="false">سورة السجدة</string>
    <string name="sura_revelation32" translatable="false">مكية</string>
    <string name="sura_ayah_num32" translatable="false">30 آيــات</string>
    <string name="sura_num33" translatable="false">33</string>
    <string name="sura_name33" translatable="false">سورة الأحزاب</string>
    <string name="sura_revelation33" translatable="false">مدنية</string>
    <string name="sura_ayah_num33" translatable="false">73 آيــات</string>
    <string name="sura_num34" translatable="false">34</string>
    <string name="sura_name34" translatable="false">سورة سبأ</string>
    <string name="sura_revelation34" translatable="false">مكية</string>
    <string name="sura_ayah_num34" translatable="false">54 آيــات</string>
    <string name="sura_num35" translatable="false">35</string>
    <string name="shhada" translatable="false">الركن الأول الشهادة</string>
    <string name="shhada_info" translatable="false">الركن الأول من أركان الإسلام هو الشهادة وهو أن تشهد أن لا إله إلا الله وأن محمداً عبده ورسوله ، ولا تعني قول الشهادة بالنطق فقط ولكن يجب إيمان القلب أنه لا يوجد إله غير الله والايمان أن سيدنا محمداً صلى الله عليه وسلم هو رسول الله، وأنه الله الواحد الاحد وأن نعبده دون أن نشرك به أحد.</string>
    <string name="slah" translatable="false">الركن الثاني الصلاة</string>
    <string name="salah_breakdown">Salah BreakDown</string>
    <string name="slah_info" translatable="false">الركن الثاني من أركان الإسلام هو الصلاة، حيث قال الله تعالى ( وَأَقِيمُوا الصَّلَاةَ وَآتُوا الزَّكَاةَ )، والصلاة هي عبادة يقوم بها المسلمون خمس مرات يومياً في أوقات محددة، وتشمل قياماً وركوعاً وسجوداً وقراءة القرآن، وتهدف الصلاة إلى تذكير المسلم بربه وتعزيز التقوى والطاعة في حياته اليومية.</string>
    <string name="zkah" translatable="false">الركن الثالث إيتاء الزكاة</string>
    <string name="zkah_info" translatable="false">هو ثالت ركن من أركان الاسلام  وقد قال الله تعالى ( وَأَقِيمُوا الصَّلَاةَ وَآتُوا الزَّكَاةَ )، وتعرف الزكاة على جزء من المال يقوم الغني بإخراجه كل عام ليعطيه للفقراء والمحتاجين، وقد فرض الله الزكاة حتى يكفل الغني الفقير فلا يشعر الفقير بالحسد لأنه لا يمتلك المال ولا ينسى الغني الفقير فيحدث ترابط في المجتمع.</string>
    <string name="som" translatable="false">الركن الرابع صوم رمضان</string>
    <string name="som_info" translatable="false">رابع ركن من أركان الاسلام هو صوم رمضان حيث قال الله تعالى ( يَا أَيُّهَا الَّذِينَ آمَنُوا كُتِبَ عَلَيْكُمُ الصِّيَامُ كَمَا كُتِبَ عَلَى الَّذِينَ مِنْ قَبْلِكُمْ لَعَلَّكُمْ تَتَّقُونَ )، ويصوم المسلم شهر رمضان كل عام عن طريق الامتناع عن الطعام والشراب من الفجر حتى المغرب، وقد أمر الله تعالى لصوم رمضان حتى يشعر المسلمين بنعم الله عليهم.</string>
    <string name="image_resource" translatable="false">Image Resource</string>
</resources>