<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/shhada"
        android:padding="7dp"
        android:gravity="start"
        android:textSize="33sp"
        android:textStyle="bold"
        android:id="@+id/shhada"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        android:src="@drawable/shhada"
        android:id="@+id/shhada_image"
        android:padding="10dp"
        android:contentDescription="@string/image_resource" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:fillViewport="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/shhada_info"
            android:padding="7dp"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:id="@+id/shhada_info"/>

    </ScrollView>

</LinearLayout>