<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/slah"
        android:padding="7dp"
        android:gravity="start"
        android:textSize="33sp"
        android:textStyle="bold"
        android:id="@+id/slah"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salah_breakdown"
        android:backgroundTint="@color/twilightGradient"
        android:textColor="@color/white"
        android:layout_gravity="end"
        android:id="@+id/slah_breakdown_btn"
        android:layout_marginBottom="6dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/slah"
        android:id="@+id/slah_image"
        android:contentDescription="@string/slah_pillar_image"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:fillViewport="true"
        android:id="@+id/arkan_slah_scroll">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/slah_info"
            android:padding="7dp"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:id="@+id/slah_info"/>

    </ScrollView>

</LinearLayout>